templates/container-policy/prohibitConfigmap-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyConfigMap
metadata:
  name: deny-config-map
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowed: ["mysql", "es"]
