templates/container-policy/prohibitHostNetwork-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockHostNetwork
metadata:
  name: block-host-network
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
